Fix exception scope verification failures in GetterSetter.cpp. https://bugs.webkit.org/show_bug.cgi?id=165013

Reviewed by Saam Barati.

* runtime/GetterSetter.cpp:
(JSC::callGetter):
(JSC::callSetter):


Canonical link: https://commits.webkit.org/182663@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208955 268f45cc-cd09-0410-ab3c-d52691b4dbfc